Update project files

--- a/backend/app/templates/my_shipment.html
+++ b/backend/app/templates/my_shipment.html
@@ -319,7 +319,7 @@
             box-shadow: 0 10px 20px rgba(0,0,0,0.1);
         }
 
-        @media (max-width: 768px) {
+        /* @media (max-width: 768px) {
             .sidebar {
                 position: fixed;
                 top: 0;
@@ -367,8 +367,8 @@
 
             .btn-group.d-flex .btn {
                 width: 100%;
-            }
-        }
+            } */
+        /* } */
     </style>
 </head>
 <body>
@@ -520,7 +520,7 @@
         </div>
     </div>
 
-    <!-- Create Shipment Modal -->
+    <!-- Create Shipment Modal
     <div class="modal fade" id="newShipmentModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -563,7 +563,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Toast Notifications -->
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
